# bluecherry-linux

./: CHANGELOG.md  CMakeLists.txt  Makefile.openwrt  README.md
example/: CMakeLists.txt  Makefile.openwrt  main.c
inc/: bclite.h  bluecherry.h
src/: bclite.c  bluecherry.c
